--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 呈立科技
-subtitle: 
-description: 手执辞乡剑，踏马入红尘
+subtitle: 天下事有难易乎？为之，则难者亦易矣；不为，则易者亦难矣。
+description: 专注并专业
 author: Lanray Chen
 language: zh-Hans
 timezone:
